fixing functions and making sure dark mode is applied to header

--- a/app/public/wp-content/themes/reinbuilt/assets/sass/_frontpage.scss
+++ b/app/public/wp-content/themes/reinbuilt/assets/sass/_frontpage.scss
@@ -1,5 +1,5 @@
 .welcome {
-    z-index: 999;
+    z-index: 959;
     position: $abs;
 
     .hero-swiper {
