--- a/app/public/wp-content/themes/reinbuilt/assets/sass/_header.scss
+++ b/app/public/wp-content/themes/reinbuilt/assets/sass/_header.scss
@@ -5,7 +5,7 @@ header {
   max-width: 100vw;
   width: 100%;
   z-index: 999;
-  // background-color: $light-background;
+  background-color: $light-background;
 
   .nav {
 
